import "messages_robocup_ssl_detection.proto";
import "aidebug.proto";

message ballsDataMsg
{
  repeated SSL_DetectionBall  balls  = 1;
  required uint32  seenState = 2;
  required float  x          = 3;
  required float  y          = 4;
  optional float  z          = 5;
  required float  vx         = 6;
  required float  vy         = 7;
  required float  vdir       = 8;
  required float  vmag       = 9;
}

message robotDataMsg
{
  required uint32 seenState   =  1;
  optional uint32 robot_id    =  2;
  required float  x           =  3;
  required float  y           =  4;
  optional float  orientation =  5;
  required float  omega       =  6;
  required float  vx          =  7;
  optional float  vy          =  8;
  required float  vdir        =  9;
  required float  vmag        = 10;
  required bool   own         = 11;
}

message gameStateMsg
{
  required string  refcmd         = 1;
  required string  state          = 2;
  required uint32  timeRemaining  = 3;
  required uint32  goalBlue       = 4; 
  required uint32  goalYellow     = 5;
  required bool    probGoalBlue   = 6;
  required bool    probGoalYellow = 7;
  optional bool    twoDefBlue     = 8;
  optional bool    twoDefYellow   = 9;
  optional bool    probBallOut    =10;
}

message Parameter_Set
{
  required string     name         = 1;
  repeated Data_Node  parameter    = 2;
}

message Parameter_Book
{
  repeated Parameter_Set    set    = 1;
}

message Ai2GuiMsg
{
  required int32        timestamp  = 1;
  required ballsDataMsg ballsData  = 2;
  repeated robotDataMsg robotData  = 3;
  optional gameStateMsg gameState  = 4;
  optional AI_Debug     aidbgdata  = 5;
  optional Parameter_Book params   = 6;
}

message Gui2AiMsg
{
  required int32        timestamp  = 1;
  optional Parameter_Book params   = 2;
  repeated Data_Node      data     = 3;
}

message Gui2GLMsg
{
  required int32        timestamp  = 1;
  required Debug_Draw   draw_data  = 2;
  optional ballsDataMsg ballsData  = 3;
  repeated robotDataMsg robotData  = 4;
}